...
        Column(
            modifier = Modifier
                .fillMaxSize()
                .clickable(enabled = drawerState == CustomDrawerState.Opened) {
                    onDrawerState(CustomDrawerState.Closed)
                }
                .testTag("categoryScreen")

        ) {
            IconRowCategories(drawerState, onDrawerState, onSearch = {
                if (it.isEmpty()) {
                    viewModel.categorySearch.value = null
                } else {
...
                createDialogVisible = !createDialogVisible
            },
            modifier = Modifier
                .align(Alignment.BottomEnd)
                .padding(end = 24.dp, bottom = 24.dp)
                .size(64.dp)
                .testTag("btnCreate"),
            colors = ButtonDefaults.buttonColors(containerColor = PinkButton)
        ) {
            Text(
                "+", fontSize = 32.sp,
                color = Color.White,
                textAlign = TextAlign.Center,
...
    var categoryName by remember { mutableStateOf("") }

    var colorChange by remember { mutableStateOf(Color(0xFF000000)) }


    AlertDialog(
        modifier = Modifier.testTag("createCategoryDialog"),
        containerColor = BlueBg,
        onDismissRequest = {},
        confirmButton = {
            Button(
                modifier = Modifier.testTag("btnCreateTask"),
                onClick = {
                    if (categoryName.isEmpty()) {
                            Toast.makeText(
                                context, GetStringObject.getStringResource(context,R.string.categoriesCreationMsg),
                                Toast.LENGTH_SHORT
                        ).show()
...
                fontWeight = FontWeight.Medium
            )
        },
        text = {
            Column {
                TextField(
                    modifier = Modifier.testTag("tfCategory"),
                    value = categoryName,
                    onValueChange = { categoryName = it },
                    label = { Text(stringResource(R.string.categorieNameMsg), fontSize = 14.sp) },
                    colors = TextFieldDefaults.colors(
                        focusedContainerColor = Color.Transparent,
                        unfocusedContainerColor = Color.Transparent,
...
) {
    var editedText by remember { mutableStateOf(currentText) }

    var color by remember { mutableIntStateOf(currentColor) }

    AlertDialog(
        modifier = Modifier.testTag("editCategoryScreen"),
        containerColor = BlueBg,
        onDismissRequest = {},
        confirmButton = {
            Button(
                modifier = Modifier.testTag("btnEdit"),
                onClick = {
                    onEdit(editedText, color)
                    onDismissDialog()
                },
                colors = ButtonDefaults.buttonColors(
                    containerColor = Color(0xFF2E7D32)
...
                fontWeight = FontWeight.Medium
            )
        },
        text = {
            Column {
                TextField(
                    modifier = Modifier.testTag("tfEditCategory"),
                    value = editedText,
                    onValueChange = { editedText = it },
                    label = { Text(stringResource(R.string.newTextMsg), fontSize = 14.sp) },
                    colors = TextFieldDefaults.colors(
                        focusedContainerColor = Color.Transparent,
                        unfocusedContainerColor = Color.Transparent,
...
