...
    Column(
        modifier = Modifier
            .clip(RoundedCornerShape(24.dp))
            .fillMaxHeight()
            .fillMaxWidth(fraction = 1f)
            .background(BlueBgTwo)
            .testTag("CustomDrawerMenu"),
        verticalArrangement = Arrangement.Center,

        ) {

        Column(
            modifier = Modifier
...

            Spacer(modifier = Modifier.size(30.dp))

            NavigationItem.entries.toTypedArray().take(4).forEach { navigationItem ->
                if (navigationItem.name == "Categories") {
                    NavigationItemView(
                        testTagMod = Modifier.testTag("btnMenuCategory"),
                        navigationItem = navigationItem,
                        selected = navigationItem == selectedNavigationItem
                    ) { onNavigationItemClick(navigationItem) }

                    Spacer(modifier = Modifier.size(4.dp))
                    return@forEach
...
